# src/routes/product.route.ts
@@ -1,6 +1,7 @@
 import type { FastifyInstance } from "fastify";
 import type { ProductController } from "../controller/product.controller.js";
 import type { ReviewController } from "../controller/review.controller.js";
+import { createProductReviewSchema } from "../schema/review.js";
 
 export const ProductRoute = (
     app: FastifyInstance,
@@ -14,5 +15,7 @@ export const ProductRoute = (
         route.get<{Params:{id: string}}>("/products/:id",productController.findProductById.bind(productController))
         route.get<{Params:{id:string};Querystring:{limit?: number, cursor?: string}}>("/products/:id/related",productController.findRelatedProducts.bind(productController))
         route.get<{Params:{id:string}; Querystring:{limit?: number, cursor?: string}}>("/products/:id/reviews",reviewController.getProductReviews.bind(reviewController))
+        route.post<{Params:{id:string}; Body:{rating:number;comment:string}}>("/products/:id/reviews",{schema: createProductReviewSchema},reviewController.createProductReview.bind(reviewController),
+        )
     },option)
 }
